Extend minimum height to prevent the image from overflowing the box

--- a/wizard/messagebox.css
+++ b/wizard/messagebox.css
@@ -4,7 +4,7 @@
   right: 1rem;
   width: calc(100% - 6.5rem);
   max-width: 60ex;
-  min-height: 3em;
+  min-height: 3.5em;
   padding: 0.5em 0.5em 0.5em 4em;
   background-color: rgb(253, 149, 222);
   border-radius: 0.5em;
